--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 .box1 {
-	/*display: none;*/
-	background-color: #FF0000;
+	display: none;
+	background-color: blue;
 	height: 200px;
 	width: 200px;
 }
